refactor to work with .env vars

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # Environment Config
 
 # store your secrets and config variables in here
-# only invited collaborators will be able to see your .env values
-
-# reference these in your code with process.env.SECRET
 
 # username and password for Acuity Scheduling, to see the page with all your events
 ACUITY_USERNAME=eric@ericmueller.org
 ACUITY_PASSWORD=aZh7dtpZDjcVF
+
+# the URLs to log into acuity
+ACUITY_BASE_URL  = "https://app.acuityscheduling.com/"
+ACUITY_LOGIN_URL = "https://app.acuityscheduling.com/client-login.php?owner=12169722"
 
 # basic http auth - this is the password you use in your calendar app to subscribe to ICS feed
 AUTH_USERNAME=eric
