refactor and add tons of .env comments

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,37 @@
-# Environment Config
+# Please make a copy of this .env.example file, call it .env, and then edit the items below.
+# The .env file is never stored in the GitHub repo - it's your secret file with your secret info.
+# It stays only on your server.
 
-# store your secrets and config variables in here
+#####################################################################################################
+# Acuity URLs
+#####################################################################################################
 
-# username and password for Acuity Scheduling, to see the page with all your events
-ACUITY_USERNAME=eric@ericmueller.org
-ACUITY_PASSWORD=aZh7dtpZDjcVF
-
-# the URLs to log into acuity
+# The next one probably won't ever change, but if Acuity decides to change it...
 ACUITY_BASE_URL  = "https://app.acuityscheduling.com/"
+
+# For the next line, try logging into Acuity first, then just change the "owner=" number at the end
 ACUITY_LOGIN_URL = "https://app.acuityscheduling.com/client-login.php?owner=12169722"
 
-# basic http auth - this is the password you use in your calendar app to subscribe to ICS feed
-AUTH_USERNAME=eric
-AUTH_PASSWORD=eric
+#####################################################################################################
+# ICS feed location and password
+#####################################################################################################
 
-# filename for calendar stored in .data folder, make this something obscure ending in .ics
+# Note that the next 2 lines are put together to form the URL for your ICS feed...
+# in the format http://hostname:port ... i.e. http://ericmueller.org:52100
+# This is EXACTLY what you enter in your calendar app as the URL for the ICS feed.
+# (Try "https://" first, and then "http://" if that fails)
+ENDPOINT_HOSTNAME=ericmueller.org
+ENDPOINT_PORT=52100
+
+# This is the user/pass you use in your calendar app to subscribe to the ICS feed.
+CALENDAR_USERNAME=eric
+CALENDAR_PASSWORD=aZh7dtpZDjcVF
+
+#####################################################################################################
+# Misc tech bits
+#####################################################################################################
+
+# Filename for cached calendar info. Make this something obscure ending in .ics
 # for example, "fractal-mew-outdoors-declare.ics"
-# the user never sees this but you will enter it in your calendar program to subscribe to the feed at this url
+# The user never sees this but it isn't protected so best to keep this secret...
 ICS_FILENAME="hostile-phantasy-nigeria.ics"
-
-# timezone for your ICS events. I use "Europe/Zurich" (without quotes)
-TIMEZONE=Europe/Zurich
-
-# note: .env is a shell file so there can't be spaces around =
-
-PORT=52100
