--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@
 ACUITY_BASE_URL  = "https://app.acuityscheduling.com/"
 
 # For the next line, try logging into Acuity first, then just change the "owner=" number at the end
+# The URL there should lead to a page with all your appointments (see example-acuity-page.jpg)
 ACUITY_LOGIN_URL = "https://app.acuityscheduling.com/client-login.php?owner=12169722"
 
 #####################################################################################################
