--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # It stays only on your server.
 
 #####################################################################################################
-# Acuity URLs
+# Acuity
 #####################################################################################################
 
 # The next one probably won't ever change, but if Acuity decides to change it...
@@ -12,6 +12,10 @@ ACUITY_BASE_URL  = "https://app.acuityscheduling.com/"
 # For the next line, try logging into Acuity first, then just change the "owner=" number at the end
 # The URL there should lead to a page with all your appointments (see example-acuity-page.jpg)
 ACUITY_LOGIN_URL = "https://app.acuityscheduling.com/client-login.php?owner=12169722"
+
+# the username and password you use to log into Acuity
+ACUITY_USERNAME = your-email-address@whatever.com
+ACUITY_PASSWORD = asjfgsgdhjsoi
 
 #####################################################################################################
 # ICS feed location and password
