--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ CALENDAR_PASSWORD=aZh7dtpZDjcVF
 # for example, "fractal-mew-outdoors-declare.ics"
 # The user never sees this but it isn't protected so best to keep this secret...
 ICS_FILENAME="hostile-phantasy-nigeria.ics"
+
+# Disable caching
+NEVER_CACHE=false;
