--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,14 @@ ACUITY_USERNAME = your-email-address@whatever.com
 ACUITY_PASSWORD = asjfgsgdhjsoi
 
 #####################################################################################################
+# Appointment Info
+#####################################################################################################
+
+TITLE = "Spin class"
+APPT_LOCATION = "307 Spin Street, Los Angeles CA 90036"
+TIMEZONE = America/Los_Angeles
+
+#####################################################################################################
 # ICS feed location and password
 #####################################################################################################
 
@@ -41,5 +49,6 @@ CALENDAR_PASSWORD=aZh7dtpZDjcVF
 # The user never sees this but it isn't protected so best to keep this secret...
 ICS_FILENAME="hostile-phantasy-nigeria.ics"
 
-# Disable caching
-NEVER_CACHE=false;
+# Caching
+CACHE_LIFETIME_IN_MINUTES = 120
+NEVER_CACHE = false
