--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
+        "axios-cookiejar-support": "^1.0.0",
         "basic-auth": "^2.0.0",
         "cheerio": "^0.22.0",
         "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
         "moment-timezone": "^0.5",
         "request": "^2.88",
         "superagent": "^3.8.2",
+        "tough-cookie": "^4.0.0",
         "util": "^0.10.3"
     },
     "keywords": [
