not working yet, but closer --?

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dependencies": {
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
+        "axios-debug-log": "^0.8.0",
         "basic-auth": "^2.0.0",
         "cheerio": "^0.22.0",
         "dotenv": "^8.2.0",
         "express": "^4",
+        "form-data": "^3.0.0",
         "fs": "^0.0.2",
-        "fs-exists-sync": "^0.1.0",
         "ical-toolkit": "^1.0.9",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5",
