--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "axios": "^0.19.2",
         "axios-cookiejar-support": "^1.0.0",
+        "axios-curlirize": "^1.3.5",
         "axios-debug-log": "^0.8.0",
         "basic-auth": "^2.0.0",
         "cheerio": "^0.22.0",
@@ -19,7 +20,7 @@
         "moment": "^2.22.1",
         "moment-timezone": "^0.5",
         "request": "^2.88",
-        "superagent": "^3.8.2",
+        "superagent": "^6.0.0",
         "tough-cookie": "^4.0.0",
         "util": "^0.10.3"
     },
