--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ ACUITY_PASSWORD = asjfgsgdhjsoi
 TITLE = "Spin class"
 APPT_LOCATION = "307 Spin Street, Los Angeles CA 90036"
 TIMEZONE = America/Los_Angeles
+CALENDAR_NAME = "Spin classes"
 
 #####################################################################################################
 # ICS feed location and password
